fix overflow in listing page

--- a/listingApartment.css
+++ b/listingApartment.css
@@ -14,6 +14,9 @@
  * animation tracking-in-expand
  * ----------------------------------------
  */ 
+ html, body {
+    overflow-x: hidden;
+}
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -57,6 +60,7 @@ header nav {
 header nav::-webkit-scrollbar {
   display: none;               /* Hide scrollbar (Chrome/Safari) */
 }
+
 
 
 header nav a {
